--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ body {
 .card {
   width: 100%;
   max-width: 330px;
-  min-height: 200px;
   padding: 1.3em;
   display: flex;
   flex-direction: column;
@@ -91,7 +90,85 @@ body {
 
 .card img {
   align-self: flex-end;
-  margin-top: 1em;
+  margin-block: 2em;
   width: 3em;
-  margin-bottom: 0 !important;
+  margin-bottom: 1em !important;
+}
+
+@media screen and (min-width: 360px) {
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .subheading {
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (min-width: 375px) {
+  .title {
+    font-size: 1.75rem;
+  }
+
+  .subheading {
+    font-size: 1.05rem;
+  }
+
+  .card h2 {
+    font-size: 1.2rem;
+  }
+
+  .card p {
+    font-size: 1rem;
+  }
+
+}
+
+
+@media screen and (min-width: 414px) {
+  .title {
+    font-size: 1.95rem;
+  }
+
+  .subheading {
+    font-size: 1.2rem;
+  }
+
+  .cards-wrapper {
+    gap: 2.5em;
+  }
+
+  .card {
+    max-width: 345px;
+  }
+
+  .card h2 {
+    font-size: 1.5rem;
+  }
+
+  .card p {
+    font-size: 1rem;
+  }
+
+  .card img {
+    width: 3.7em;
+  }
+}
+
+
+
+
+
+
+
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  margin-bottom: 1em
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
