--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,56 @@ body {
 }
 
 
+@media screen and (min-width: 768px) {
+  .subheading {
+    margin-inline: auto;
+    text-align: center;
+    max-width: 650px;
+  }
+
+  .cards-wrapper :nth-child(2) {
+    grid-area: T;
+  }
+
+  .cards-wrapper :nth-child(3) {
+    margin-bottom: 3em;
+    grid-area: K;
+  }
+
+  .cards-wrapper :last-child {
+    grid-area: C;
+  }
+
+  .cards-wrapper :first-child {
+    grid-area: S;
+  }
+
+  .card {
+    height: 280px;
+    min-width: 200px;
+  }
+
+  .cards-wrapper {
+    display: grid;
+    grid-gap: 2em !important;
+    grid-template-columns: 3;
+    grid-template-rows: 2;
+    grid-template-areas:
+      ". T ."
+      ". T ."
+      ". T ."
+      "S T C"
+      "S T C"
+      "S . C"
+      "S K C"
+      "S K C"
+      "S K C"
+      ". K .";
+    gap: 1.6em;
+    justify-content: center;
+  }
+}
+
 
 
 
